Add Survey to website

--- a/_includes/alerts.html
+++ b/_includes/alerts.html
@@ -1,7 +1,6 @@
-<!--
+
   <div class='tease'>
   <p>
-    Exciting stuff goes here!
-  </p>
-</div>
--->
+  The <a href="https://community.theforeman.org/t/foreman-community-survey-2021/24428" target="_blank">2021 community survey</a> is now live! Please take a few minutes to fill it out and help us make Foreman better!
+    </p>
+  </div>
