Update latest version and latest news for 3.0 GA

--- a/_includes/latest_news.html
+++ b/_includes/latest_news.html
@@ -1,2 +1,3 @@
+<p>Foreman 3.0.0 has been released! <a href="manuals/3.0/quickstart_guide.html"> Follow the quick start to install it.</a></p>
 <p>Foreman 2.5.3 has been released! <a href="manuals/2.5/quickstart_guide.html"> Follow the quick start to install it.</a></p>
 <p>Foreman 2.4.1 has been released! <a href="manuals/2.4/quickstart_guide.html"> Follow the quick start to install it.</a></p>
