--- a/_includes/version.html
+++ b/_includes/version.html
@@ -1,6 +1,8 @@
 <div class="version-marker">
   <p>
     Latest versions:
+      <a href="{{ site.baseurl }}manuals/3.0/index.html#Releasenotesfor3.0">3.0.0</a>
+      /
       <a href="{{ site.baseurl }}manuals/2.5/index.html#Releasenotesfor2.5">2.5.3</a>
       /
       <a href="{{ site.baseurl }}manuals/2.4/index.html#Releasenotesfor2.4">2.4.1</a>
