--- a/_includes/features.html
+++ b/_includes/features.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class='col-md-10'>
 					<h2>Audits</h2>
-					<p>No more wondering why did your load balancer suddenly became a database. Check how, who and when in our audits system.</p>
+					<p>No more wondering why did your load balancer suddenly become a database. Check how, who and when in our audits system.</p>
 				</div>
 			</div>
 		</div>
