--- a/_includes/alerts.html
+++ b/_includes/alerts.html
@@ -1,6 +1,8 @@
+<!--
 
   <div class='tease'>
   <p>
-  The <a href="https://community.theforeman.org/t/foreman-community-survey-2021/24428" target="_blank">2021 community survey</a> is now live! Please take a few minutes to fill it out and help us make Foreman better!
-    </p>
-  </div>
+    Exciting stuff goes here!
+  </p>
+</div>
+-->
