add my talks from fosdem 2021 and 2022

--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -127,6 +127,8 @@ function createVideosLayout(title, selector, videos_list) {
 };
 
 var talks = [
+	{ html: '<video width="397.5" src="https://video.fosdem.org/2022/D.infra/foreman_katello_leapp_elevate.webm" controls></video><h4><strong>FOSDEM2022: Migrating Foreman/Katello from EL7 to EL8 using LEAPP/ELevate</strong> - Evgeni Golov</h4>' },
+	{ html: '<video width="397.5" src="https://video.fosdem.org/2021/D.infra/yourmanagementlayershouldbecattletoo.webm" controls></video><h4><strong>FOSDEM2021: your management layer should be cattle too</strong> - Evgeni Golov</h4>' },
 	{ id: "1Flc7ubAkEo", title: "CfgMgmtCamp 2020: Maintaining over 40 Ansible modules: 4 years later", author: "Evgeni Golov" },
 	{ id: "XvuSFC5-HKk", title: "FrOSCon 2019 - Foreman/Katello mit Ansible automatisieren (German)", author: "Evgeni Golov", description: '<a href="https://media.ccc.de/v/froscon2019-2418-foreman_katello_mit_ansible_automatisieren">original video on media.ccc.de</a>' },
 	{ id: "OGlsTDGhOH0", title: "OSAD 2018 - Automatatisches Testen &amp; Releasen von Softwarepaketen mit Katello und Ansible (German)", author: "Evgeni Golov" },
