add slides for fosdem 2021 and 2022

--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -48,6 +48,8 @@ pagename: Media
 					<li><a href="/static/presentations/Evgeni_Golov-Writing_Ansible_modules_for_Foreman_and_Katello.pdf">Writing Ansible modules for Foreman and Katello</a> (Evgeni Golov)</li>
 					<li><a href="/static/presentations/Evgeni_Golov-Developing_Ansible_modules_for_Foreman_and_Katello.pdf">Developing Ansible modules for Foreman and Katello</a> (Evgeni Golov)</li>
 					<li><a href="/static/presentations/Evgeni_Golov-Maintaining_over_40_Ansible_modules_4_years_later.pdf">Maintaining over 40 Ansible modules: 4 years later</a> (Evgeni Golov)</li>
+					<li><a href="/static/presentations/Evgeni_Golov-your_management_layer_should_be_cattle_too.pdf">your management layer should be cattle too</a> (Evgeni Golov)</li>
+					<li><a href="/static/presentations/Evgeni_Golov-Migrating_Foreman_from_EL7_to_EL8_using_LEAPP_ELevate.pdf">Migrating Foreman/Katello from EL7 to EL8 using LEAPP/ELevate</a> (Evgeni Golov)</li>
 				</ul>
 				<h3>German</h3>
 				<ul>
