Deprecate Chef plug-in for Foreman 3.5+

--- a/_includes/monitoring.html
+++ b/_includes/monitoring.html
@@ -1,3 +1,3 @@
 <img class="homepage-img" src="{{ site.baseurl }}static/images/monitoring.png">
 <h2>Monitoring</h2>
-<p>Collect Puppet, Chef, Salt and Ansible reports and facts. Monitor host configuration, report status, distribution and trends.</p>
+<p>Collect Puppet, Salt, and Ansible reports and facts. Monitor host configuration, report status, distribution and trends.</p>
