--- a/_includes/screenshots.html
+++ b/_includes/screenshots.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class='col-md-4'>
 				<h2>Configuration</h2>
-				<p>An external node classifier, hiera-like parameters, and reports monitoring for Puppet, Salt and Chef are included. Completely ready to tweak host groups in your data center.</p>
+				<p>An external node classifier, hiera-like parameters, and reports monitoring for Puppet and Salt are included. Completely ready to tweak host groups in your data center.</p>
 			</div>
 			<div class='col-md-4'>
 			 	<a href="#"><img src='static/images/screenshots/puppetclasses.png' class='img-thumbnail'/></a>
