--- a/_includes/latest_news.html
+++ b/_includes/latest_news.html
@@ -1,2 +1,3 @@
-<p>Foreman 3.6.0 has been released! <a href="manuals/3.6/quickstart_guide.html"> Follow the quick start to install it.</a></p>
-<p>Foreman 3.5.2 has been released! <a href="manuals/3.5/quickstart_guide.html"> Follow the quick start to install it.</a></p>
+{% for release in site.foreman_latest_releases %}
+<p>Foreman {{ release.minmaj }}.{{ release.patch }} has been released! <a href="{{ site.baseurl }}manuals/{{ release.minmaj }}/quickstart_guide.html">Follow the quick start to install it.</a></p>
+{% endfor %}
